# BISEN

./: .gitignore  CMakeLists.txt  README.md  isen.cfg
Framework/: CMakeLists.txt
Framework/include/: definitions.h  extern_lib.h  outside_util.h  trusted_crypto.h  trusted_mbedtls.h  trusted_util.h  types.h  untrusted_crypto.h  untrusted_util.h
Framework/src/Client/: CMakeLists.txt  Client.cpp  Client.h  bisen_tests.cpp  bisen_tests.h  util.cpp  util.h
Framework/src/Client/rbisen/: ClientCrypt.c  ClientCrypt.h  ClientUtils.h  Definitions.h  EnglishAnalyzer.cpp  EnglishAnalyzer.h  PorterStemmer.c  QueryParser.cpp  QueryParser.hpp  SseClient.cpp  SseClient.hpp  Utils.c  Utils.h  types.h
Framework/src/Iee/: CMakeLists.txt  Enclave.cpp  Enclave.edl  Enclave.h  thread_handler.cpp  thread_handler.h
Framework/src/Iee/mbedtls/: ecalls.cpp  pprint.c  pprint.h  ssl_conn_hdlr.cpp  ssl_conn_hdlr.h
Framework/src/Iee/sgx_config/: Enclave.config.xml
Framework/src/IeeComm/: App.cpp  App.h  CMakeLists.txt
Framework/src/IeeComm/mbedtls/: mbedtls_net.c
Framework/src/IeeComm/ocall/: ocall.cpp  ocall.h
Framework/src/IeeComm/sgx_handler/: sgx_handler.cpp  sgx_handler.h
Framework/src/IeeComm/threading/: thread_pool.cpp  thread_pool.h
Framework/src/LibTrusted/: CMakeLists.txt  outside_util.cpp  trusted_crypto.cpp  trusted_util.cpp
Framework/src/LibUntrusted/: CMakeLists.txt  secure_conn.cpp  untrusted_crypto.cpp  untrusted_util.cpp
Framework/src/StorageService/: CMakeLists.txt  FindTBB.cmake  SseServer.cpp  SseServer.hpp  StorageServer_old.cpp  cassie.cpp  cassie.h
Search/: CMakeLists.txt
Search/src/: trusted.cpp  untrusted.cpp  util.cpp  util.h
Search/src/rbisen/: QueryEvaluator.cpp  QueryEvaluator.h  SseIee.cpp  SseIee.h
Search/src/rbisen/util/: IeeUtils.cpp  IeeUtils.h  vec_int.cpp  vec_int.h  vec_token.cpp  vec_token.h
